--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -51,6 +51,7 @@
                                 <option value="Orthopedic" {% if doctor.specialization == 'Orthopedic' %}selected{% endif %}>Orthopedic</option>
                                 <option value="Pediatrician" {% if doctor.specialization == 'Pediatrician' %}selected{% endif %}>Pediatrician</option>
                                 <option value="Psychiatrist" {% if doctor.specialization == 'Psychiatrist' %}selected{% endif %}>Psychiatrist</option>
+                                <option value="Ophthalmic Assistant" {% if doctor.specialization == 'Ophthalmic Assistant' %}selected{% endif %}>Ophthalmic Assistant</option>
                                 <option value="General Physician" {% if doctor.specialization == 'General Physician' %}selected{% endif %}>General Physician</option>
                                 <option value="Other" {% if doctor.specialization == 'Other' %}selected{% endif %}>Other</option>
                             </select>
