--- a/templates/register.html
+++ b/templates/register.html
@@ -89,6 +89,7 @@
                         <option value="Pediatrician">Pediatrician</option>
                         <option value="Psychiatrist">Psychiatrist</option>
                         <option value="General Physician">General Physician</option>
+                        <option value="Ophthalmic Assistant">Ophthalmic Assistant</option>
                         <option value="Other">Other</option>
                     </select>
                 </div>
