add name in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
             <hr>
             <div class="footer-bottom">
                 <p>
-                    &copy; 2025 HealthCare Hub. All rights reserved. | 
+                    &copy; 2025 HealthCare Hub. All rights reserved. | Dev: Sujit Sah | 
                     Built with <i class="bi bi-heart-fill"></i> for a healthier world.
                 </p>
             </div>
